Update index.html for the TESTNEST mobile-optimized application

--- a/index.html
+++ b/index.html
@@ -2,58 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TESTNEST App</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>TESTNEST Mobile Application</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        .button { min-height: 52px; padding: 10px; font-size: 16px; }
+        .card { border: 1px solid #ccc; margin: 10px; padding: 20px; border-radius: 10px; }
+        .dashboard { display: flex; flex-direction: column; align-items: center; }
+        #quizTimer { font-size: 20px; }
+    </style>
 </head>
 <body>
-    <div id="loginForm" class="container">
+    <div id="loginScreen" class="card">
         <h2>Login</h2>
-        <form>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="submit">Login</button>
-        </form>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button class="button" onclick="login()">Login</button>
     </div>
 
-    <div id="studentDashboard" class="hidden">
+    <div id="dashboard" class="dashboard" style="display:none;">
         <h2>Student Dashboard</h2>
-        <p>Welcome, <span id="studentName"></span>!</p>
-        <button id="takeQuiz">Take Quiz</button>
-    </div>
-
-    <div id="adminDashboard" class="hidden">
-        <h2>Admin Dashboard</h2>
-        <p>Admin functionalities go here.</p>
+        <div class="card"><button class="button" onclick="takeTest()">Take Test</button></div>
+        <div class="card"><button class="button" onclick="viewWorksheets()">Worksheets</button></div>
+        <div class="card"><button class="button" onclick="viewResults()">My Results</button></div>
+        <div id="quizTimer"></div>
+        <div id="progressBar"></div>
     </div>
 
     <script>
-        document.getElementById('loginForm').onsubmit = function(event) {
-            event.preventDefault(); // Prevent form submission
+        const students = { "student": "student123" };
+        const admins = { "admin": "admin123" };
+        let timer;
+        let timeLeft = 60 * 10; // 10 minutes
+
+        function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-
-            // Simulate login
-            if (username === 'admin' && password === 'admin123') {
-                document.getElementById('loginForm').classList.add('hidden');
-                document.getElementById('adminDashboard').classList.remove('hidden');
-            } else if (username && password) {
-                document.getElementById('loginForm').classList.add('hidden');
-                document.getElementById('studentName').innerText = username;
-                document.getElementById('studentDashboard').classList.remove('hidden');
+            if (students[username] === password || admins[username] === password) {
+                document.getElementById('loginScreen').style.display = 'none';
+                document.getElementById('dashboard').style.display = 'block';
+                startQuiz();
             } else {
-                alert('Please enter valid credentials');
+                alert('Invalid credentials');
             }
-        };
+        }
 
-        document.getElementById('takeQuiz').onclick = function() {
-            alert('Quiz functionality not implemented yet.');
-        };
+        function startQuiz() {
+            timer = setInterval(() => {
+                if (timeLeft <= 0) {
+                    clearInterval(timer);
+                    alert('Time is up!');
+                } else {
+                    const minutes = Math.floor(timeLeft / 60);
+                    const seconds = timeLeft % 60;
+                    document.getElementById('quizTimer').innerText = `Time Left: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+                    timeLeft--;
+                }
+            }, 1000);
+        }
+
+        function takeTest() { /* Quiz functionality goes here */ }
+        function viewWorksheets() { /* Worksheet functionality goes here */ }
+        function viewResults() { /* Results display functionality goes here */ }
     </script>
 </body>
 </html>
