--- a/index.html
+++ b/index.html
@@ -2,68 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TESTNEST Mobile Application</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        .button { min-height: 52px; padding: 10px; font-size: 16px; }
-        .card { border: 1px solid #ccc; margin: 10px; padding: 20px; border-radius: 10px; }
-        .dashboard { display: flex; flex-direction: column; align-items: center; }
-        #quizTimer { font-size: 20px; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TESTNEST</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="loginScreen" class="card">
+
+<header>
+    <h1>Welcome to TESTNEST</h1>
+</header>
+
+<main>
+    <div id="login">
         <h2>Login</h2>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button class="button" onclick="login()">Login</button>
+        <form id="loginForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" required>
+
+            <button type="submit">Login</button>
+        </form>
     </div>
 
-    <div id="dashboard" class="dashboard" style="display:none;">
-        <h2>Student Dashboard</h2>
-        <div class="card"><button class="button" onclick="takeTest()">Take Test</button></div>
-        <div class="card"><button class="button" onclick="viewWorksheets()">Worksheets</button></div>
-        <div class="card"><button class="button" onclick="viewResults()">My Results</button></div>
-        <div id="quizTimer"></div>
-        <div id="progressBar"></div>
+    <div id="quiz" class="hidden">
+        <h2>Quiz</h2>
+        <p id="timer">Time Left: <span id="time">60</span> seconds</p>
+        <form id="quizForm">
+            <!-- Quiz questions will be injected here -->
+        </form>
+        <button id="submitQuiz">Submit Quiz</button>
     </div>
 
-    <script>
-        const students = { "student": "student123" };
-        const admins = { "admin": "admin123" };
-        let timer;
-        let timeLeft = 60 * 10; // 10 minutes
+    <div id="adminPanel" class="hidden">
+        <h2>Admin Panel</h2>
+        <form id="addQuestionForm">
+            <label for="question">Question:</label>
+            <input type="text" id="question" required>
 
-        function login() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            if (students[username] === password || admins[username] === password) {
-                document.getElementById('loginScreen').style.display = 'none';
-                document.getElementById('dashboard').style.display = 'block';
-                startQuiz();
-            } else {
-                alert('Invalid credentials');
-            }
-        }
+            <label for="answer">Answer:</label>
+            <input type="text" id="answer" required>
 
-        function startQuiz() {
-            timer = setInterval(() => {
-                if (timeLeft <= 0) {
-                    clearInterval(timer);
-                    alert('Time is up!');
-                } else {
-                    const minutes = Math.floor(timeLeft / 60);
-                    const seconds = timeLeft % 60;
-                    document.getElementById('quizTimer').innerText = `Time Left: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-                    timeLeft--;
-                }
-            }, 1000);
-        }
+            <button type="submit">Add Question</button>
+        </form>
+    </div>
 
-        function takeTest() { /* Quiz functionality goes here */ }
-        function viewWorksheets() { /* Worksheet functionality goes here */ }
-        function viewResults() { /* Results display functionality goes here */ }
-    </script>
+    <div id="resultsTracking" class="hidden">
+        <h2>Your Results</h2>
+        <table id="resultsTable">
+            <thead>
+                <tr><th>Quiz Name</th><th>Score</th></tr>
+            </thead>
+            <tbody>
+                <!-- Results will be injected here -->
+            </tbody>
+        </table>
+    </div>
+</main>
+
+<footer>
+    <p>&copy; 2026 TESTNEST</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
