--- a/index.html
+++ b/index.html
@@ -367,7 +367,11 @@ const db = firebase.firestore();
    Put your admin Gmail(s) here.
 ========================== */
 const ADMIN_EMAILS = [
-  "dnyanrui90@gmail.com"   // ✅ your email (change/add more)
+  const ADMIN_EMAILS = [
+  "dnyanrui90@gmail.com",
+  "pawarjai999@gmail.com"
+];
+ // ✅ your email (change/add more)
 ];
 
 let intendedRole = "student"; // chosen at login
